--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.5",
     "geist": "^1.3.0",
-    "next": "^14.2.3",
+    "next": ">=14.2.25",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,7 +33,7 @@
     "@typescript-eslint/parser": "^7.10.0",
     "drizzle-kit": "^0.21.4",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": ">=14.2.25",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
